Fixed retrieval of phone and fixed some layout issues

--- a/src/app/webshop/shop/shop.component.scss
+++ b/src/app/webshop/shop/shop.component.scss
@@ -1,8 +1,3 @@
-.shop-toolbar {
-    background-color: #fff;
-    margin-bottom: 20px;
-}
-
 .overview {
     align-items: flex-start;
     background-color: #759BA4;
