--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,3 +54,8 @@ app-detail {
         color: blue;
     }
 }
+
+.shop-toolbar {
+    background-color: #fff;
+    margin-bottom: 20px;
+}
